<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一家人</string>
    <string name="send">发送</string>

    <string name="login">登 录</string>
    <string name="register">注 册</string>

    <string name="accountHint">请输入账号</string>
    <string name="passwordHint">请输入密码</string>
    <string name="loginTip">没有账号？立即注册</string>

    <string name="phoneHint">请输入学号</string>
    <string name="nameHint">请输入昵称</string>
    <string name="classesHint">请输入班级</string>
    <string name="registerTip">注册即表示同意</string>
    <string name="appTip">《一家人用户协议》</string>

    <string name="homePage">菜单</string>

    <string name="taskInfo">任务一览</string>
    <string name="confirmTask">是否确认完成该任务？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="signIn">签到</string>
    <string name="taskList">任务</string>
    <string name="notification">通知</string>
    <string name="talkAboutEveryOne">家人</string>
    <string name="weather">天气</string>
    <string name="calendar">日程规划</string>
    <string name="game">游戏</string>
    <string name="settings">设置</string>
    <string name="feedback">意见反馈</string>
    <string name="update">更新</string>

    <string name="confirmCheckIn">您上次签到时间：</string>

    <string name="sound">声 音</string>
    <string name="vibrate">震 动</string>
    <string name="deleteAllConversation">清空所有聊天记录</string>
    <string name="confirmConversation">是否确认清空所有聊天记录？</string>
    <string name="deleteAllNotifition">清空通知记录</string>
    <string name="confirmNotifition">是否确认清空通知记录？</string>
    <string name="about">关于我们</string>

    <string name="title">标题</string>
    <string name="feedbackBody">在这里留下您宝贵的意见~</string>

    <string name="portrait">头像</string>
    <string name="account_lab">学号</string>
    <string name="classes">班级</string>
    <string name="name">昵称</string>
    <string name="sex">性别</string>

</resources>
