<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="28dp"
            android:textStyle="bold"
            android:layout_margin="12dp"
            android:textColor="@color/blue0"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_backButton"
            android:onClick="registerOnClick"
            android:padding="15dp"
            android:background="@null"
            android:src="@drawable/btn_login_back"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_margin="35dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/register_accountEdit"
                android:hint="@string/phoneHint"
                android:textSize="22dp"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:inputType="phone"
                android:textColor="@color/gray"
                android:textColorHint="@color/text_hint"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_login_login"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/register_passwordEdit"
                android:hint="@string/passwordHint"
                android:textSize="22dp"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/text_hint"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/register_classesEdit"
                android:hint="@string/classesHint"
                android:textSize="22dp"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/text_hint"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/register_nameEdit"
                android:hint="@string/nameHint"
                android:textSize="22dp"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/gray"
                android:textColorHint="@color/text_hint"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_login_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <Button
            android:id="@+id/register_registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:onClick="registerOnClick"
            android:background="@drawable/btn_register_check"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerTip"
                android:textColor="@color/gray"
                android:textSize="15dp"
                android:layout_gravity="center_vertical" />

            <Button
                android:id="@+id/register_tipBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appTip"
                android:clickable="true"
                android:textSize="15dp"
                android:textStyle="bold"
                android:onClick="registerOnClick"
                android:textColor="@drawable/text_register_tip"
                android:background="@null"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>