<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/settings_bg">

    <RelativeLayout
        android:layout_marginBottom="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/textTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingBottom="10dp"
            android:text="@string/settings"
            android:textColor="@color/text_hint"
            android:textSize="20dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center_horizontal">

        <TextView
            android:text="@string/sound"
            android:id="@+id/sound"
            android:padding="11dp"
            android:textSize="18dp"
            android:layout_marginLeft="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="关闭"
            android:textOn="打开"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center_horizontal">

        <TextView
            android:padding="11dp"
            android:textSize="18dp"
            android:text="@string/vibrate"
            android:layout_marginLeft="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vibrate"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="关闭"
            android:textOn="打开"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/deleteConversation"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_btn_bg"
        android:onClick="SettingsOnClick"
        android:layout_gravity="center_horizontal">

        <TextView
            android:padding="11dp"
            android:textSize="18dp"
            android:text="@string/deleteAllConversation"
            android:layout_marginLeft="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_btn_bg"
        android:onClick="SettingsOnClick"
        android:layout_gravity="center_horizontal">

        <TextView
            android:padding="11dp"
            android:textSize="18dp"
            android:text="@string/about"
            android:layout_marginLeft="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">


        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"></RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/exitSystem"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="30dp"
                android:onClick="SettingsOnClick"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="退 出"
                android:textStyle="bold"
                android:textSize="28dp"
                android:textColor="@color/black"
                android:background="@drawable/login_button_bg"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>