<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="28dp"
            android:textStyle="bold"
            android:layout_margin="12dp"
            android:textColor="@color/blue1"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:layout_marginLeft="14dp"
            android:background="@drawable/title_back"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_margin="35dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/accountEdit"
                android:hint="@string/accountHint"
                android:textSize="22dp"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:drawablePadding="12dp"
                android:inputType="textAutoComplete"
                android:textColor="@color/gray"
                android:textColorHint="@color/text_hint"
                android:drawableLeft="@drawable/icon_account"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_login_login"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/passwardEdit"
                android:hint="@string/passwordHint"
                android:textSize="22dp"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:paddingBottom="10dp"
                android:drawablePadding="12dp"
                android:inputType="textPassword"
                android:textColor="@color/gray"
                android:textColorHint="@color/text_hint"
                android:drawableLeft="@drawable/icon_pwd"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_login_login"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/loginButton"
                android:text="@string/login"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/blue0"
                android:layout_marginTop="68dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login_login"
                android:layout_gravity="center_horizontal" />
<!--todo 添加text注册-->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:layout_marginTop="68dp"
                android:clickable="true"
                android:onClick="loginOnClick"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>